# picoFreeRtos

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
include/: FreeRTOSConfig.h
pico-sdk/: Makefile  cmake_install.cmake
pico-sdk/docs/: Makefile  cmake_install.cmake
pico-sdk/src/: Makefile  cmake_install.cmake
pico-sdk/src/common/boot_picobin_headers/: Makefile  cmake_install.cmake
pico-sdk/src/common/boot_picoboot_headers/: Makefile  cmake_install.cmake
pico-sdk/src/common/boot_uf2_headers/: Makefile  cmake_install.cmake
pico-sdk/src/common/hardware_claim/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_base_headers/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_bit_ops_headers/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_divider_headers/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_stdlib_headers/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_usb_reset_interface_headers/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_util/: Makefile  cmake_install.cmake
pico-sdk/src/rp2040/boot_stage2/: Makefile  cmake_install.cmake
pico-sdk/src/rp2040/hardware_regs/: Makefile  cmake_install.cmake
pico-sdk/src/rp2040/hardware_structs/: Makefile  cmake_install.cmake
pico-sdk/src/rp2040/pico_platform/: Makefile  (+1 more)
pico-sdk/tools/: Makefile  cmake_install.cmake
src/: main.c
(+154 files in other folders)
